# project-stuff

./: README.md  pyproject.toml
cli/: app.py
